app/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: default
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 30000   # Choose an available port, for example, 30000
  selector:
    app: nginx
  type: NodePort
